--- a/trunk/developer/build.xml
+++ b/trunk/developer/build.xml
@@ -10,7 +10,7 @@
       <property name="testClassesDir" value="testClasses"/>
       <property name="buildDir"		value="logQL"/>
       <property name="jar" value="${project_name}/${project_name}.jar"/>
-      <property name="libPath" value="../lib/jfreechart.jar;../lib/poi-3.5-FINAL-20090928.jar;../lib/poi-scratchpad-3.5-FINAL-20090928.jar"/>
+      <property name="libPath" value="../lib/jfreechart.jar;../lib/poi-3.5-FINAL-20090928.jar;../lib/poi-scratchpad-3.5-FINAL-20090928.jar;../lib/poi-ooxml-3.5-FINAL-20090928.jar"/>
       <property name="testLibPath" value="${libPath};../lib/junit-4.4.jar;${jar}"/>
       <mkdir dir="${classDir}" />
       <mkdir dir="${buildDir}" />
@@ -34,6 +34,11 @@
       	<fileset file="../lib/poi-3.5-FINAL-20090928.jar"/>
       	<fileset file="../lib/poi-LICENSE"/>
       	<fileset file="../lib/poi-scratchpad-3.5-FINAL-20090928.jar"/>
+      	<fileset file="../lib/poi-ooxml-3.5-FINAL-20090928.jar"/>
+      	<fileset file="../lib/ooxml-schemas-1.0.jar"/>
+      	<fileset file="../lib/dom4j-1.6.1.jar"/>
+        <fileset file="../lib/xmlbeans-2.3.0.jar"/>
+      	<fileset file="../lib/geronimo-stax-api_1.0_spec-1.0.jar"/>
       </copy>
       <copy todir="${buildDir}/">
         <fileset dir="../docs">
